# mono2d_body_detection

./: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
include/: image_utils.h  mono2d_body_det_node.h
launch/: hobot_mono2d_body_detection.launch.py  mono2d_body_detection.launch.py  mono2d_body_detection_without_camera.launch.py
src/: fasterrcnn_kps_output_parser.cpp  image_utils.cpp  main.cpp  mono2d_body_det_node.cpp
